--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.4.0",
-    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.5",
+    "react-spinners": "^0.15.0",
     "tailwindcss": "^4.0.5"
   },
   "devDependencies": {
